--- a/vizta-chat-demo.html
+++ b/vizta-chat-demo.html
@@ -537,7 +537,7 @@
                     key: 'main',
                     className: "h-[calc(100vh-60px)]"
                 }, React.createElement(ViztalChat, {
-                    apiBaseUrl: "/api/vizta-chat"
+                    apiBaseUrl: "http://localhost:8080/api"
                 }))
             ]);
         }
